--- a/app/views/create-cases-add-products/notes.html
+++ b/app/views/create-cases-add-products/notes.html
@@ -3,3 +3,5 @@ within their own bubble and create duplicate products). The me option allows use
 products they have recently added and to then create cases for.
 
 2. should products without a related case feature a flag?
+
+3. On the products details page, there should be a link to create a case.
