--- a/app/views/create-cases-add-products/products-page-new.html
+++ b/app/views/create-cases-add-products/products-page-new.html
@@ -258,7 +258,7 @@
                                 Actions
                             </th>
                             <td headers="item-01 actions-01" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2021-11</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2021-11</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -292,7 +292,7 @@
                                 Actions
                             </th>
                             <td headers="item-02 actions-02" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 20-2120</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 20-2120</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -325,7 +325,7 @@
                                 Actions
                             </th>
                             <td headers="item-03 actions-03" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2104-21000</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2104-21000</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -358,7 +358,7 @@
                                 Actions
                             </th>
                             <td headers="item-04 actions-04" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2007-37001</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2007-37001</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -391,7 +391,7 @@
                                 Actions
                             </th>
                             <td headers="item-05 actions-05" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 1007-27002</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 1007-27002</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -424,7 +424,7 @@
                                 Actions
                             </th>
                             <td headers="item-06 actions-06" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 45001-70000</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 45001-70000</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -457,7 +457,7 @@
                                 Actions
                             </th>
                             <td headers="item-07 actions-07" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 25022-21010</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 25022-21010</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -490,7 +490,7 @@
                                 Actions
                             </th>
                             <td headers="item-08 actions-08" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2221-70003</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2221-70003</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -523,7 +523,7 @@
                                 Actions
                             </th>
                             <td headers="item-09 actions-09" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 21-23341</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 21-23341</span></a>
                             </td>
                         </tr>
                     </tbody>
