--- a/app/views/create-cases-add-products/products-page.html
+++ b/app/views/create-cases-add-products/products-page.html
@@ -416,7 +416,7 @@
                                 Actions
                             </th>
                             <td headers="item-01 actions-01" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2021-11</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2021-11</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -449,7 +449,7 @@
                                 Actions
                             </th>
                             <td headers="item-02 actions-02" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 20-2120</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 20-2120</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -482,7 +482,7 @@
                                 Actions
                             </th>
                             <td headers="item-03 actions-03" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2104-21000</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2104-21000</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -515,7 +515,7 @@
                                 Actions
                             </th>
                             <td headers="item-04 actions-04" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2007-37001</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2007-37001</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -548,7 +548,7 @@
                                 Actions
                             </th>
                             <td headers="item-05 actions-05" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 1007-27002</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 1007-27002</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -581,7 +581,7 @@
                                 Actions
                             </th>
                             <td headers="item-06 actions-06" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 45001-70000</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 45001-70000</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -614,7 +614,7 @@
                                 Actions
                             </th>
                             <td headers="item-07 actions-07" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 25022-21010</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 25022-21010</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -647,7 +647,7 @@
                                 Actions
                             </th>
                             <td headers="item-08 actions-08" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2221-70003</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 2221-70003</span></a>
                             </td>
                         </tr>
                     </tbody>
@@ -680,7 +680,7 @@
                                 Actions
                             </th>
                             <td headers="item-09 actions-09" colspan="3" class="govuk-table__cell">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 21-23341</span></a>
+                                <a href="/add-product-v4/is-this-case-related-to-covid" class="govuk-link govuk-link--no-visited-state">Create a case <span class="govuk-visually-hidden"> for 21-23341</span></a>
                             </td>
                         </tr>
                     </tbody>
