--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,11 +58,17 @@
           </ul-->
 
             <ul class="govuk-list govuk-list--bullet">
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/cases-page.html">Cases page</a></li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/cases-page.html">Cases page</a>
+                <ul>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/find-the-product.html">Find the product link page</a></li>
+                </ul>
+
+              </li>
               <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page.html">Products page</a>
                 <ul class="govuk-list govuk-list--bullet">
                   <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page-results.html">Products page - after search</a></li>
                   <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page-new.html">Products page - new product</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page-new-2.html">Products page - new product - alt design</a></li>
                 </ul>
               </li>
             </ul>
