--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -174,25 +174,32 @@ ul.opss-radio-list {
                     padding-top: govuk-spacing(3);
                 }
             }
-            /*tr:first-child + tr {
-                th + th {
-                   padding-left: govuk-spacing(2);
-                }
-            }
+            /*tr:first-child + tr {th + th {padding-left: govuk-spacing(2); } }
             tr {
-                td:first-of-type {
+                td:first-of-type {padding-left: govuk-spacing(2); }
+                td:last-of-type {padding-right: govuk-spacing(2); }
+            }
+            & + tbody th {padding-top: govuk-spacing(4); }*/
+        }
+    }
+    &.xyz {
+        tbody:first-of-type {
+            background-color: govuk-colour("light-grey");
+
+            tr:first-child {
+                th {
+                    color: $govuk-success-colour;
                     padding-left: govuk-spacing(2);
-                }
-                td:last-of-type {
-                    padding-right: govuk-spacing(2);
+                    padding-top: govuk-spacing(3);
                 }
             }
-
-            & + tbody th {
-                padding-top: govuk-spacing(4);
-            }*/
+            tr:first-child + tr {th + th {padding-left: govuk-spacing(2); } }
+            tr {
+                td:first-of-type {padding-left: govuk-spacing(2); }
+                td:last-of-type {padding-right: govuk-spacing(2); }
+            }
+            & + tbody th {padding-top: govuk-spacing(4); }
         }
-
     }
 
 }
